tests/fixtures/fail/raw_init_safe.sali
let main(): i32 = {
  let pointer = unsafe {
    raw_alloc(i32)(4, 4)
  }
  raw_init(pointer, 42)
  0
}
